# fishcli

./: CLAUDE.md  Cargo.toml  flake.nix
.cargo/: config.toml
assets/: achievements.json  bait.json  bugs.json  daily_quests.json  fish.json  gear.json  inspect.json  landmarks.json  lure_recipes.json  npcs.json  quests.json  recipes.json  rods.json  skill_tree.json  tackle.json
src/: achievements.rs  app.rs  bait.rs  boss.rs  buffs.rs  bug_catch.rs  bugs.rs  chop.rs  daily.rs  fish.rs  fishdex.rs  fishing.rs  fishlist.rs  forage.rs  gametime.rs  gear.rs  house.rs  inspect_text.rs  item.rs  landmarks.rs  lure_recipes.rs  main.rs  map.rs  mastery_challenges.rs  mining.rs  narrator.rs  notes.rs  npc.rs  perf.rs  player.rs  procedural_quests.rs  quest.rs  recipes.rs  rod.rs  save.rs  skill_tree.rs  stats.rs  tackle.rs  weather.rs  world.rs
