[package]
name = "fishcli"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
aes-gcm = "0.10"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
