[package]
name = "fishcli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
aes-gcm = "0.10"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rayon = "1.10"

[profile.release]
# Iteration-friendly release builds. ~30-60s instead of ~2min. The binary
# loses ~5-10% perf vs full LTO but is plenty fast for gameplay.
lto = false
codegen-units = 16
strip = true
incremental = true

# Use `cargo build --profile ship` only for distributable binaries. Full
# LTO + single codegen unit; slow but smallest/fastest output.
[profile.ship]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
incremental = false

# Debug builds: cheap to compile, still tolerable to play. Heavy deps
# build at -O2 once and cache; only fishcli code is rebuilt unoptimised
# on every edit.
[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2
